--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 # .gitignore file:  Please only ignore things that apply globally to the project.
-# If you must ignore something on your box, please use .git/info/exclude
+# If you must ignore something on your box, please use .git/info/exclude.
 
