--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,11 @@ repositories {
 dependencies {
     compile group: 'joda-time', name: 'joda-time', version:'2.2'
     compile group: 'com.google.guava', name: 'guava', version:'14.0.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.0-beta9'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.0-beta9'
     testCompile group: 'junit', name: 'junit', version:'4.11'
     testCompile group: 'org.powermock', name: 'powermock-core', version:'1.5'
     testCompile group: 'org.powermock', name: 'powermock-module-junit4', version:'1.5'
-    testCompile group: 'org.powermock', name: 'powermock-api-mockito', version:'1.5'
+    testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.5'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 }
