--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '14.0.1'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.0-beta9'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.0-beta9'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'org.powermock', name: 'powermock-core', version: '1.5'
     testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '1.5'
